# bmi-tester-c

./: CMakeLists.txt  README.md
bmi/: CMakeLists.txt  bmic.pc  bmic.pc.cmake  bmilib.h  register.c  tester.c
bmi/tests/: CMakeLists.txt.old  test_info_funcs.c  test_time_funcs.c
